tests/ui/parser/issues/issue-44406.stderr
error: invalid `struct` delimiters or `fn` call arguments
  --> $DIR/issue-44406.rs:3:9
   |
LL | / macro_rules! foo {
LL | |     ($rest: tt) => {
LL | |         bar(baz: $rest)
   | |         ^^^^^^^^^^^^^^^
LL | |     }
LL | | }
   | |_- in this expansion of `foo!`
...
LL |       foo!(true);
   |       ---------- in this macro invocation
   |
help: if `bar` is a struct, use braces as delimiters
   |
LL |         bar { baz: $rest }
   |             ~            ~
help: if `bar` is a function, use the arguments directly
   |
LL -         bar(baz: $rest)
LL +         bar(: $rest)
   |

error: aborting due to previous error

